kubernetes-bonus/deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-eng
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-eng 
  template:
    metadata:
      labels: 
        app: hello-eng
    spec:
      containers:
      - name: echo
        image: hashicorp/http-echo:1.0
        args: ["-text=Hello World", "-listen=:5678"]
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: hello-eng
spec:
  selector: 
    app: hello-eng 
  ports:
  - port: 5678
    targetPort: 5678
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-ita
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: hello-ita
  template:
    metadata:
      labels: 
        app: hello-ita
    spec:
      containers:
      - name: echo
        image: hashicorp/http-echo:1.0
        args: ["-text=Ciao Mondo", "-listen=:5678"]
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: hello-ita
spec:
  selector: 
    app: hello-ita
  ports:
  - port: 5678
    targetPort: 5678
